--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,8 @@ markdown_extensions:
   - pymdownx.snippets:
       auto_append:
         - includes/abbreviations.md
+        - includes/feedback-hu.md
+        - includes/license-hu.md
 watch:
   - includes
 nav:
