docs: add course materials page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,3 +33,4 @@ nav:
   - 'Gondosság': '10-gondossag.md'
   - 'Összegzés és Tanúsítvány': '11-osszegzes-es-tanusitvany.md'
   - 'További Gyakorlatok': '12-tovabbi-gyakorlatok.md'
+  - 'Kurzus Anyagok': 'kurzus-anyagok.md'
