docs: update video transcript formatting to markdown

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ extra_javascript:
   - js/abbreviations-first-only.js
 markdown_extensions:
   - abbr
+  - admonitions
   - pymdownx.snippets:
       auto_append:
         - includes/abbreviations.md
