--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,8 @@ markdown_extensions:
       auto_append:
         - includes/abbreviations.md
 extra:
+  analytics:
+    provider: custom
   consent:
     title: Cookie hozzájárulás
     description: >-
